RESOLVED FIXED295128
REGRESSION(294902@main): shape-margin and vertical-align do not report the correct computed values when zoomed
https://bugs.webkit.org/show_bug.cgi?id=295128
Summary REGRESSION(294902@main): shape-margin and vertical-align do not report the co...
Sam Weinig
Reported 2025-06-27 15:13:19 PDT
Probably during one of the computed style refactors, shape-margin and vertical-align got into their mind that they should not apply zoom on computed value extracting.
Attachments
Sam Weinig
Comment 1 2025-06-27 16:17:14 PDT
EWS
Comment 2 2025-06-27 20:35:15 PDT
Committed 296767@main (7eeb199e2df8): <https://commits.webkit.org/296767@main> Reviewed commits have been landed. Closing PR #47325 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-06-27 20:36:16 PDT
Note You need to log in before you can comment on or make changes to this bug.