REGRESSION(294902@main): shape-margin and vertical-align do not report the correct computed values when zoomed https://bugs.webkit.org/show_bug.cgi?id=295128

Reviewed by Darin Adler.

Fix regression where zoom was not taken into account for 'shape-margin' and 'vertical-align'
computed values.

* LayoutTests/fast/css/zoom-shape-margin-expected.txt: Added.
* LayoutTests/fast/css/zoom-shape-margin.html: Added.
* LayoutTests/fast/css/zoom-vertical-align-expected.txt: Added.
* LayoutTests/fast/css/zoom-vertical-align.html: Added.
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/style/StyleExtractorConverter.h:
(WebCore::Style::ExtractorConverter::convertLengthWithoutApplyingZoom): Deleted.
* Source/WebCore/style/StyleExtractorCustom.h:
(WebCore::Style::ExtractorCustom::extractVerticalAlign):
(WebCore::Style::ExtractorCustom::extractVerticalAlignSerialization):
* Source/WebCore/style/StyleExtractorSerializer.h:
(WebCore::Style::ExtractorSerializer::serializeLengthWithoutApplyingZoom): Deleted.

Canonical link: https://commits.webkit.org/296767@main